--- a/first.html
+++ b/first.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FIRST</title>
+    <link rel="stylesheet" href="first.css">
+    
 </head>
 <body>
     <h1>WSG</h1>
     <p>My name is <b>Nyendrak Yoezer Zangmo</b></p>
     I study at <a href="https://www.cst.edu.bt/index.php/en/"CST</a>
         <H2>Form</H2>
-            <label> for="name">Name:</label>
-            <label>g</label>
-            <input type="date"> <br><br>
+            <input type="name">Name:
+            
+            <label></label>
+            <input type="date"> 
+            <br>
+            <br>
             <input type="email">Email:
 </body>
 </html>
