--- a/StylingTable.html
+++ b/StylingTable.html
@@ -27,7 +27,44 @@
             <td>70%</td>
             <td>B</td>
         </tr>
-        
+        <tr>
+            <td>CSF101</td>
+            <td>1</td>
+            <td>10</td>
+            <td>8</td>
+            <td>80%</td>
+            <td>B</td>
+        </tr>
+        <tr>
+            <td>Mat 205</td>
+            <td>2</td>
+            <td>8</td>
+            <td>80%</td>
+            <td>B</td>
+        </tr>
+        <tr>
+            <td>Dzg 101</td>
+            <td>1</td>
+            <td>NA</td>
+            <td>NA</td>
+            <td>NA</td>
+        </tr>
+        <tr>
+            <td>ITM 302</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>SEM 101</td>
+            <td>2</td>
+            <td>NA</td>
+            <td>NA</td>
+            <td>NA</td>
+            <td>NA</td>
+        </tr>
     </div>
 </body>
 </html>
