--- a/first.html
+++ b/first.html
@@ -12,12 +12,14 @@
     <p>My name is <b>Nyendrak Yoezer Zangmo</b></p>
     I study at <a href="https://www.cst.edu.bt/index.php/en/"CST</a>
         <H2>Form</H2>
-            <input type="name">Name:
+            <label for="fullName">Full Name:</label><br>
+            <input type="text" id="fullName" name="fullName" required><br><br>
+
             
-            <label></label>
-            <input type="date"> 
-            <br>
-            <br>
-            <input type="email">Email:
+            <label>
+                <input type="date"> Date:</label>
+                <br>
+               <label> <input type="email">Email address:</label>
+          
 </body>
 </html>
